# python-urbackup

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: workflow.yaml
docs/: api_reference.md  cli_reference.md  getting_started.md  index.md
docs/usage/: initialization.md  operations.md
test/: list_backup_counts.py  stop_all.py  urbackup_api_test.py
tests/: .env.example  download_installer.py  integration_test.py  list_backup_counts.py  stop_all.py  unit_test.py  urbackup_api_test.py  urbackup_test.py
urbackup/: __init__.py  _base.py  _legacy.py  _typed.py  _types.py
urbackup_api/: __init__.py
