[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-urbackup"
version = "0.2.0"
description = "Python wrapper to access and control an UrBackup server"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Judah Paul", email = "me@judahpaul.com" },
]
keywords = ["urbackup", "web", "api", "client", "backup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/judahpaul16/python-urbackup"
Documentation = "https://python-urbackup.readthedocs.io/"
Repository = "https://github.com/judahpaul16/python-urbackup"

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "coveralls",
    "mkdocs-material",
    "mkdocs-git-revision-date-localized-plugin",
]

[tool.setuptools.packages.find]
include = ["urbackup*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["urbackup"]
